--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design By JP</title>
-    @vite(['public/css/colorswitcher.css', 'public/css/profileHome.css','resources/js/style-switcher.js'])
+    @vite(['dist/css/colorswitcher.css', 'dist/css/profileHome.css','dist/js/style-switcher.js'])
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    <link rel="stylesheet" href="asset('css/profilehomecolor.css')" class="alternate-style" title="color-1">
-    <link rel="stylesheet" href="asset('css/profilehomecolor2.css')" class="alternate-style" title="color-2" disabled>
-    <link rel="stylesheet" href="asset('css/profilehomecolor3.css')" class="alternate-style" title="color-3" disabled>
-    <link rel="stylesheet" href="asset('css/profilehomecolor4.css')" class="alternate-style" title="color-4" disabled>
-    <link rel="stylesheet" href="asset('css/profilehomecolor5.css')" class="alternate-style" title="color-5" disabled>
+    <link rel="stylesheet" href="{{ asset('dist/css/profilehomecolor.css') }}" class="alternate-style" title="color-1">
+    <link rel="stylesheet" href="{{ asset('dist/css/profilehomecolor2.css') }}" class="alternate-style" title="color-2" disabled>
+    <link rel="stylesheet" href="{{ asset('dist/css/profilehomecolor3.css') }}" class="alternate-style" title="color-3" disabled>
+    <link rel="stylesheet" href="{{ asset('dist/css/profilehomecolor4.css') }}" class="alternate-style" title="color-4" disabled>
+    <link rel="stylesheet" href="{{ asset('dist/css/profilehomecolor5.css') }}" class="alternate-style" title="color-5" disabled>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js" integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
