--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design By JP</title>
+    <title>JP as Developer </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    <link rel="stylesheet" href="dist/css/app.css">
-    <link rel="stylesheet" href= "dist/css/profileHome.css" >
+    <link rel="stylesheet" href="dist/css/colorswitcher.css">
+    <link rel="stylesheet" href="dist/css/profileHome.css" >
     <link rel="stylesheet" href="dist/css/profilehomecolor.css" class="alternate-style" title="color-1">
     <link rel="stylesheet" href="dist/css/profilehomecolor2.css" class="alternate-style" title="color-2" disabled>
     <link rel="stylesheet" href="dist/css/profilehomecolor3.css" class="alternate-style" title="color-3" disabled>
@@ -55,7 +55,7 @@
                             <a href="#about" class="btn hire-me">More About Me</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="{{URL ('image/notoga.jpg')}}">
+                            <img src="dist/assets/image/notoga.jpg">
                         </div>
                     </div>
                 </div>
@@ -542,6 +542,11 @@
             </div>
         </div>
         <!-- Switch Style End -->
+        <!-- </Js Files> -->
+        <script src="dist/js/app.js"></script>
+        <script src="dist/js/bootstrap.js"></script>
+        <script src="dist/js/style-switcher.js"></script>    
+        <!-- </Js Files> -->
     </div>
 </body>
 
