--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                     </div>
                     <div class="row">
                         <div class="section-Heading padd-15">
-                            <h2>My Last Project :</h2>
+                            <h2>My Last Project : Web Mortgage / Listing System</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -396,7 +396,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="{{URL ('image/screenshot3.PNG')}}" alt="">
+                                    <img src="dist/assets/image/Webmortgage.JPG" alt="">
                                 </div>
                             </div>
                         </div>
@@ -405,7 +405,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="{{URL ('image/screenshots1.png')}}" alt="">
+                                    <img src="dist/assets/image/Webmortgage1.JPG" alt="">
                                 </div>
                             </div>
                         </div>
@@ -414,7 +414,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="{{URL ('image/screenshots.png')}}" alt="">
+                                    <img src="dist/assets/image/Webmortgage2.JPG" alt="">
                                 </div>
                             </div>
                         </div>
@@ -423,7 +423,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="{{URL ('image/screenshots1.png')}}" alt="">
+                                    <img src="dist/assets/image/Webmortgage4.JPG" alt="">
                                 </div>
                             </div>
                         </div>
