--- a/index.html
+++ b/index.html
@@ -387,8 +387,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="section-Heading padd-15">
-                            <h2>My Last Project : Web Mortgage / Listing System</h2>
+                        <div class="portfolio-heading padd-15">
+                            <h2>My Last Project : Web Mortgage/Listing System</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -405,7 +405,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="dist/assets/image/Webmortgage1.JPG" alt="">
+                                    <img src="dist/assets/image/Webmortgage2.JPG" alt="">
                                 </div>
                             </div>
                         </div>
@@ -414,7 +414,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="dist/assets/image/Webmortgage2.JPG" alt="">
+                                    <img src="dist/assets/image/Webmortgage1.JPG" alt="">
                                 </div>
                             </div>
                         </div>
@@ -459,7 +459,7 @@
                         </div>
                     </div>
                     <div class="contact-title padd-15">Have you any Questions ?</div>
-                    <div class="contact-sub-title padd-15">Feel Free To Message me</div>
+                    <div class="contact-sub-title padd-15">Feel free to message me to my accounts below</div>
                     <div class="row flex flex-col">
                         <!-- Contact Item start-->
                         <div class="contact-info-item">
@@ -484,9 +484,14 @@
                                 <p>www.linkedin.com/in/john-philip-villanueva-630b99219</p>
                             </div>
                         </div>
-
+                        <div class="contact-info-item">
+                            <div class="icon padd-15"><i class="fa-brands fa-github"></i>
+                                <h4>My GitHub Account</h4>
+                                <p>https://github.com/jpdev619</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="contact-title">Send Me an Email</div>
+                    <div class="contact-title-email">Send Me an Email</div>
                     <!-- Contact Form Section Start -->
                     <div class="row">
                         <div class="contact-form padd-15">
