--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                         <div class="contact-info-item">
                             <div class="icon padd-15"><i class="fa fa-envelope"></i>
                                 <h4>Email Me Here</h4>
-                                <p>Johnphilip0275@gmail.com</p>
+                                <p><a href="mailto:Johnphilip0275@gmail.com" target="_blank">Johnphilip0275@gmail.com</a></p>
                             </div>
                         </div>
                         <!-- Contact Item End  -->
@@ -481,13 +481,13 @@
                         <div class="contact-info-item">
                             <div class="icon padd-15"><i class="fa-brands fa-linkedin"></i>
                                 <h4>My LinkedIn Profile</h4>
-                                <p>www.linkedin.com/in/john-philip-villanueva-630b99219</p>
+                                <p><a href="https://www.linkedin.com/in/john-philip-villanueva-630b99219" target="_blank">John Philip Villanueva</a></p>
                             </div>
                         </div>
                         <div class="contact-info-item">
                             <div class="icon padd-15"><i class="fa-brands fa-github"></i>
                                 <h4>My GitHub Account</h4>
-                                <p>https://github.com/jpdev619</p>
+                                <p><a href="https://github.com/jpdev619" target="_blank">jpdev619</a></p>
                             </div>
                         </div>
                     </div>
