--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="{{URL ('image/screenshots.png')}}" alt="">
+                                    <img src="dist/assets/image/Webmortgage3.JPG" alt="">
                                 </div>
                             </div>
                         </div>
@@ -441,7 +441,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="{{URL ('image/screenshot3.png')}}" alt="">
+                                    <img src="dist/assets/image/Webmortgage5.JPG" alt="">
                                 </div>
                             </div>
                         </div>
